# mcp-omniscience

./: .gitignore  LICENSE  PROMPTS.md  README.md  index.sh  init.sh  pyproject.toml  run_server.sh  start.sh
scripts/: test_call_graph.py  test_token_savings.py
src/omniscience/: __init__.py  cli.py  server.py
src/omniscience/ingestion/: __init__.py  parser.py  scanner.py
src/omniscience/memory/: graph_db.py  vector_db.py
src/omniscience/updater/: __init__.py  patcher.py
